--- a/src/app/posts/[slug]/singlePage.module.css
+++ b/src/app/posts/[slug]/singlePage.module.css
@@ -1,67 +1,71 @@
-.container{}
-
-.infoContainer{
+.infoContainer {
     display: flex;
     align-items: center;
     gap: 50px;
 }
 
-.textContainer{
+.textContainer {
     flex: 1;
 }
 
-.title{
+.title {
     font-size: 64px;
     margin-bottom: 50px;
 }
 
-.user{
+.user {
     display: flex;
     align-items: center;
     gap: 20px;
 }
 
-.userImageContainer{
+.userImageContainer {
+    margin-top: 20px;
     width: 50px;
     height: 50px;
     position: relative;
 }
 
-.avatar{
+.avatar {
     border-radius: 50%;
     object-fit: cover;
 }
 
-.userTextContainer{
+.userTextContainer {
     display: flex;
     flex-direction: column;
     gap: 5px;
     color: var(--softTextColor);
 }
 
-.imageContainer{
+.username {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.imageContainer {
     flex: 1;
     height: 350px;
     position: relative;
 }
 
-.image{
+.image {
     object-fit: cover;
-    margin-top: 30px;
-    border-radius: 10px;
+    margin-top: 20px;
+    border-radius: 20px;
 }
 
-.content{
+.content {
     display: flex;
     gap: 50px;
 }
 
-.post{
+.post {
     flex: 5;
     margin-top: 60px;
 }
 
-.description{
+.description p {
     font-size: 20px;
     font-weight: 300;
     margin-bottom: 20px;
