--- a/src/app/write/write.module.css
+++ b/src/app/write/write.module.css
@@ -1,15 +1,25 @@
 .container{
-
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
-.editor{
+.select{
+    margin-bottom: 50px;
+    padding: 10px 20px;
+    margin-left: 50px;
+    width: max-content;
+}
+
+.editor {
     display: flex;
     gap: 20px;
     height: 700px;
     position: relative;
 }
 
-.button, .addButton{
+.button,
+.addButton {
     width: 36px;
     height: 36px;
     border-radius: 50%;
@@ -21,8 +31,18 @@
     cursor: pointer;
 }
 
-.addButton{
+.addButton {
     border-color: #1a8917;
+}
+
+.add {
+    display: flex;
+    gap: 20px;
+    background-color: var(--bg);
+    position: absolute;
+    z-index: 999;
+    width: 100%;
+    left: 50px;
 }
 
 .input{
@@ -38,24 +58,14 @@
     color: #b3b3b1;
 }
 
-.add{
-    display: flex;
-    gap: 20px;
-    background-color: var(--bg);
-    position: absolute;
-    z-index: 999;
-    width: 100%;
-    left: 50px;
-}
-
-.textArea{
+.textArea {
     width: 100%;
 }
 
 .publish{
     position: absolute;
-    top: 30px;
-    right: 20px;
+    top: 0px;
+    right: 0px;
     padding: 10px 20px;
     border: none;
     background-color: #1a8917;
